--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^2.2.4",
+    "@mantine/core": "^7.17.4",
     "@tailwindcss/vite": "^4.1.3",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.3"
+    "react-input-emoji": "^5.9.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.8.1",
+    "store": "^2.0.12",
+    "tailwindcss": "^4.1.3",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
