--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,19 @@
   "dependencies": {
     "@iconscout/react-unicons": "^2.2.4",
     "@mantine/core": "^7.17.4",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-input-emoji": "^5.9.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1",
