--- a/client/package.json
+++ b/client/package.json
@@ -1,46 +1,36 @@
 {
-  "name": "frontend",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@iconscout/react-unicons": "^2.2.4",
-    "@mantine/core": "^7.17.4",
-    "@reduxjs/toolkit": "^2.8.2",
-    "@tailwindcss/vite": "^4.1.3",
-    "axios": "^1.8.4",
-    "data-fns": "^1.1.0",
-    "date-fns": "^4.1.0",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.511.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-input-emoji": "^5.9.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.0",
-    "react-toastify": "^11.0.5",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
-    "socket.io-client": "^4.8.1",
-    "store": "^2.0.12",
-    "tailwindcss": "^4.1.3",
-    "timeago.js": "^4.0.2"
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.3",
+    "date-fns": "^3.0.6",
+    "gsap": "^3.12.5",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "vite": "6.2.0"
   }
 }
