--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
     "socket.io": "^4.8.1"
   }
 }
